# Basic-Neural-Network

./: .gitignore  Cargo.toml  README.md  file.txt
src/: lib.rs  main.rs
src/image/: TEST_FILE_csv_to_images.txt  mod.rs
src/matrix/: TEST_FILE_load_matrix.txt  mod.rs
src/neural/: mod.rs
